fixed bug on ios fullimage overflow scroll

--- a/src/App.sass
+++ b/src/App.sass
@@ -32,6 +32,8 @@
   &.full-image-active
     .App-Burger
       opacity: 0
+    .view-wrapper
+      overflow-y: hidden
   +large-devices
     .SideMenu-wrapper
       width: 0
